# internal/api/oas/oas_operations_gen.go
@@ -9,6 +9,7 @@ const (
 	AbortActorOperation               OperationName = "AbortActor"
 	AddDocumentOperation              OperationName = "AddDocument"
 	AddModelOperation                 OperationName = "AddModel"
+	ChangePasswordOperation           OperationName = "ChangePassword"
 	ChatStreamOperation               OperationName = "ChatStream"
 	CompileGraphOperation             OperationName = "CompileGraph"
 	ConfigureProviderOperation        OperationName = "ConfigureProvider"
@@ -30,7 +31,7 @@ const (
 	EnablePluginOperation             OperationName = "EnablePlugin"
 	ExportAgentOperation              OperationName = "ExportAgent"
 	GetAgentOperation                 OperationName = "GetAgent"
-	GetAuthConfigOperation            OperationName = "GetAuthConfig"
+	GetAuthStatusOperation            OperationName = "GetAuthStatus"
 	GetChannelTypesOperation          OperationName = "GetChannelTypes"
 	GetDatasetOperation               OperationName = "GetDataset"
 	GetGraphHistoryOperation          OperationName = "GetGraphHistory"
@@ -77,6 +78,7 @@ const (
 	ResumeStreamOperation             OperationName = "ResumeStream"
 	RollbackVersionOperation          OperationName = "RollbackVersion"
 	SetDefaultModelOperation          OperationName = "SetDefaultModel"
+	SetupAuthOperation                OperationName = "SetupAuth"
 	UpdateAgentOperation              OperationName = "UpdateAgent"
 	UpdateAllSkillsOperation          OperationName = "UpdateAllSkills"
 	UpdateMemoryOperation             OperationName = "UpdateMemory"
